version/stable/_sources/api/ansys/mechanical/stubs/v241/Ansys/Mechanical/ExternalData/FixedWidthImportSettings.rst.txt
.. vale off



:class:`FixedWidthImportSettings`
=================================

.. py:class:: ansys.mechanical.stubs.v241.Ansys.Mechanical.ExternalData.FixedWidthImportSettings

   Bases: :py:obj:`object`


   
   T:Ansys.Mechanical.ExternalData.FixedWidthImportSettings defines how to import external data from a fixed-width source file.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: FixedWidthImportSettings

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Clear`
            - 
          * - :py:attr:`~GetEnumerator`
            - 
          * - :py:attr:`~RemoveAt`
            - Removes the import definition at the specified index.
          * - :py:attr:`~UseColumn`
            - ..


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~AverageCornerNodesToMidsideNodes`
            - ..
          * - :py:attr:`~ColumnWidths`
            - ..
          * - :py:attr:`~Count`
            - Gets the number of column definitions.
          * - :py:attr:`~Format`
            - Gets the existing corresponding format.
          * - :py:attr:`~Item`
            - Item property.
          * - :py:attr:`~SkipFooter`
            - Gets or sets the number of rows to ignore at the end of the file during import.
          * - :py:attr:`~SkipRows`
            - Gets or sets the number of rows to skip over at the start of the file during import.







Property detail
---------------
.. py:property:: AverageCornerNodesToMidsideNodes
   :type: Optional[bool]


   
















   ..
       !! processed by numpydoc !!

.. py:property:: ColumnWidths
   :type: Optional[str]


   
















   ..
       !! processed by numpydoc !!

.. py:property:: Count
   :type: Optional[int]


   
   Gets the number of column definitions.
















   ..
       !! processed by numpydoc !!

.. py:property:: Format
   :type: Optional[Ansys.Mechanical.DataModel.MechanicalEnums.ExternalData.ImportFormat]


   
   Gets the existing corresponding format.
















   ..
       !! processed by numpydoc !!

.. py:property:: Item
   :type: Optional[Ansys.Mechanical.ExternalData.ColumnarDataImportDefinition]


   
   Item property.
















   ..
       !! processed by numpydoc !!

.. py:property:: SkipFooter
   :type: Optional[int]


   
   Gets or sets the number of rows to ignore at the end of the file during import.
















   ..
       !! processed by numpydoc !!

.. py:property:: SkipRows
   :type: Optional[int]


   
   Gets or sets the number of rows to skip over at the start of the file during import.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Clear() -> None
   

.. py:method:: GetEnumerator() -> Iterator[Ansys.Mechanical.ExternalData.ColumnarDataImportDefinition]
   

.. py:method:: RemoveAt(index: int) -> None

   
   Removes the import definition at the specified index.

   ..
       !! processed by numpydoc !!

.. py:method:: UseColumn(index: int, variableType: Ansys.Mechanical.DataModel.MechanicalEnums.ExternalData.VariableType, unit: str, name: str) -> Ansys.Mechanical.ExternalData.ColumnarDataSourceBase

   

   ..
       !! processed by numpydoc !!



.. vale on